Fix typo in homework 2.

--- a/hw2.tex
+++ b/hw2.tex
@@ -23,7 +23,7 @@ Come prepared to present your solutions on Monday, August 28th.
               0 & & \ddots & \ddots & 0  \\ 0 & & \cdots & 0 & 1\\ 1 & 0 & & \cdots & 0\end{bmatrix}$$
 
             Show that the eigenvectors of any such matrix are discrete Fourier modes
-            with entries $v_j e^{ij\xi}$.  What are the appropriate values of $\xi$?
+            with entries $v_j = e^{ij\xi}$.  What are the appropriate values of $\xi$?
 
     \item   Determine the numerical dispersion relation for the heat equation semi-discretized with
             second-order centered differences.  How does this differ from the true dispersion
