Update dispersion relation notebook.

--- a/Linear PDE dispersion relations.ipynb
+++ b/Linear PDE dispersion relations.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -32,15 +34,15 @@
    "outputs": [],
    "source": [
     "# Spatial grid\n",
-    "m=64                            # Number of grid points in space\n",
+    "m=128                            # Number of grid points in space\n",
     "L = 2 * np.pi                   # Width of spatial domain\n",
     "x = np.arange(-m/2,m/2)*(L/m)   # Grid points\n",
     "dx = x[1]-x[0]                  # Grid spacing\n",
     "\n",
     "# Temporal grid\n",
-    "tmax=4.0     # Final time\n",
-    "N = 25       # number grid points in time\n",
-    "k = tmax/N   # interval between output times\n",
+    "tmax=2.0     # Final time\n",
+    "N = 50       # number grid points in time\n",
+    "h = tmax/N   # interval between output times\n",
     "\n",
     "xi = np.fft.fftfreq(m)*m*2*np.pi/L  # Wavenumber \"grid\"\n",
     "# (this is the order in which numpy's FFT gives the frequencies)"
@@ -53,26 +55,27 @@
    "outputs": [],
    "source": [
     "# Initial data\n",
-    "u = np.sin(2*x)**2 * (x<-L/4)\n",
+    "IC = 'gaussian'\n",
+    "\n",
+    "if IC == 'gaussian':\n",
+    "    u = np.sin(2*x)**2 * (x<-L/4)   # Gaussian\n",
+    "elif IC == 'square':\n",
+    "    u = x<-2.                       # Square wave\n",
+    "else:\n",
+    "    raise(Exception('Unrecognized IC'))\n",
+    "    \n",
     "uhat0 = np.fft.fft(u)\n",
     "\n",
     "a1 = -1.0       # Advection coefficient\n",
     "a2 = 0.  # Diffusion coefficient\n",
-    "a3 = 0.  # Dispersion coefficient"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "a3 = -0.001  # Dispersion coefficient\n",
+    "\n",
     "# Store solutions in a list for plotting later\n",
     "frames = [u.copy()]\n",
     "\n",
     "# Now we solve the problem\n",
     "for n in range(1,N+1):\n",
-    "    t = n*k\n",
+    "    t = n*h\n",
     "    uhat = np.exp((1.j*xi*a1 - a2*xi**2 - 1.j*xi**3*a3)*t) * uhat0\n",
     "    u = np.real(np.fft.ifft(uhat))\n",
     "    frames.append(u.copy())\n",
@@ -80,13 +83,11 @@
     "# Set up plotting\n",
     "fig = plt.figure(figsize=(9,4)); axes = fig.add_subplot(111)\n",
     "line, = axes.plot([],[],lw=3)\n",
-    "axes.set_xlim((x[0],x[-1])); axes.set_ylim((-0.1,1.))\n",
+    "axes.set_xlim((x[0],x[-1])); axes.set_ylim((-0.1,1.1))\n",
     "\n",
     "def plot_frame(i):\n",
-    "    #fig = plt.figure()\n",
-    "    #plt.plot(x,frames[i])\n",
     "    line.set_data(x,frames[i])\n",
-    "    axes.set_title('t='+str(i*k))\n",
+    "    axes.set_title('t='+str(i*h))\n",
     "    fig.canvas.draw()\n",
     "    return fig\n",
     "\n",
@@ -113,14 +114,14 @@
    "outputs": [],
    "source": [
     "# Spatial grid\n",
-    "m=64                            # Number of grid points in space\n",
+    "m=128                            # Number of grid points in space\n",
     "L = 2 * np.pi                   # Width of spatial domain\n",
     "x = np.arange(-m/2,m/2)*(L/m)   # Grid points\n",
     "dx = x[1]-x[0]                  # Grid spacing\n",
     "\n",
     "# Temporal grid\n",
-    "tmax=4.0     # Final time\n",
-    "N = 25       # number grid points in time\n",
+    "tmax=2.0     # Final time\n",
+    "N = 50       # number grid points in time\n",
     "k = tmax/N   # interval between output times"
    ]
   },
@@ -167,8 +168,6 @@
     "axes.set_xlim((x[0],x[-1])); axes.set_ylim((-0.1,1.))\n",
     "\n",
     "def plot_frame(i):\n",
-    "    #fig = plt.figure()\n",
-    "    #plt.plot(x,frames[i])\n",
     "    line1.set_data(x,frames_true[i])\n",
     "    line2.set_data(x,frames_cd[i])\n",
     "    axes.set_title('t='+str(i*k))\n",
@@ -177,7 +176,7 @@
     "\n",
     "# Animate the solution\n",
     "matplotlib.animation.FuncAnimation(fig, plot_frame,\n",
-    "                                   frames=len(frames),\n",
+    "                                   frames=len(frames_true),\n",
     "                                   interval=200,\n",
     "                                   repeat=False)"
    ]
