Correct typo in DAE homework.

--- a/hw_DAE.tex
+++ b/hw_DAE.tex
@@ -47,7 +47,7 @@ Come prepared to present your solutions on Thursday, November 16th.
 
                 $$\delta(t) = (0, \epsilon\sin(\omega t), \epsilon\cos(\omega t))^T$$
 
-            then in the perturbed solution $y_1 = \epsilon^2 \omega$, which is unbounded
+            then in the perturbed solution $y_1'(t) = \epsilon^2 \omega$, which is unbounded
             as $\omega \to \infty$.  DAEs are unstable in the sense that small perturbations
             to the algebraic equations can induce large perturbations in the solution.
 \end{enumerate}
